[package]
edition = '2018'
name = "toastify"
version = "0.5.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
description = "A commandline tool that shows desktop notifications using [notify-rust](https://docs.rs/notify-rust/)."

keywords = ["desktop", "notification", "notify", "dbus", "libnotify"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
notify-rust = "4.5"

[dependencies.clap]
version = "3.0.0"
features = [ "derive", "cargo" ]
