[package]
edition = '2018'
name = "toastify"
version = "0.5.4"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
description = "A commandline tool that shows desktop notifications using [notify-rust](https://docs.rs/notify-rust/)."

keywords = ["desktop", "notification", "notify", "dbus", "libnotify"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies.notify-rust]
version = "4.5"
default-features = false

[features]
default = ["z"]
d = ["notify-rust/d"]
z = ["notify-rust/z"]
images = ["notify-rust/images"]

[dependencies.clap]
version = "3.0.0"
features = [ "derive", "cargo" ]
